--- a/src/reportTemplates/CustomerSummary.jrxml
+++ b/src/reportTemplates/CustomerSummary.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="bc8797c8-d6fd-4fc6-be8c-3713fd83a68c">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="31"/>
 	<queryString language="SQL">
 		<![CDATA[SELECT
      count(PAYMENT."PAYMENTID") AS AverageSpendperTransaction,
@@ -30,6 +30,12 @@ GROUP BY
 	<field name="PET_ANIMALTYPE" class="java.lang.String"/>
 	<field name="TOTALAMOUNT" class="java.math.BigDecimal"/>
 	<field name="AVERAGESPENDPERTRANSACTION" class="java.lang.Integer"/>
+	<variable name="TotalSales" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{TOTALAMOUNT}]]></variableExpression>
+	</variable>
+	<variable name="TotalPets" class="java.lang.Integer" calculation="Count">
+		<variableExpression><![CDATA[$F{PET_PETID}]]></variableExpression>
+	</variable>
 	<group name="CUSTOMER_CUSTIC">
 		<groupExpression><![CDATA[$F{CUSTOMER_CUSTIC}]]></groupExpression>
 		<groupHeader>
@@ -200,16 +206,44 @@ Phone no: 607-3676531]]></text>
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="17">
+		<band height="72">
 			<textField>
-				<reportElement mode="Opaque" x="0" y="4" width="515" height="13" backcolor="#E6E6E6" uuid="7b5e7e3f-0062-44c7-bce5-9797b8ae7d89"/>
+				<reportElement mode="Opaque" x="0" y="59" width="515" height="13" backcolor="#E6E6E6" uuid="7b5e7e3f-0062-44c7-bce5-9797b8ae7d89"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement mode="Opaque" x="515" y="4" width="40" height="13" backcolor="#E6E6E6" uuid="45648643-dac7-4200-ab28-71882248de76"/>
+				<reportElement mode="Opaque" x="515" y="59" width="40" height="13" backcolor="#E6E6E6" uuid="45648643-dac7-4200-ab28-71882248de76"/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
+			<textField pattern="###0.00">
+				<reportElement x="433" y="39" width="122" height="20" uuid="a2d68448-1540-4e19-a79c-0e2a2e0e65e1"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{TotalSales}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="433" y="19" width="122" height="20" uuid="396b157e-17ab-4279-94be-3b797bb6841f"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{TotalPets}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="308" y="19" width="125" height="20" uuid="40e4d0c9-8c05-41d8-8300-8b18a7332d2b"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<text><![CDATA[ Total Number of Pet :]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="360" y="39" width="73" height="20" uuid="3673f7cb-3f48-4a54-8ff6-008abac376aa"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<text><![CDATA[Total Sales : ]]></text>
+			</staticText>
 		</band>
 	</pageFooter>
 	<summary>
