--- a/src/reportTemplates/StaffPerformanceException.jrxml
+++ b/src/reportTemplates/StaffPerformanceException.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="17e9b7c9-9691-43f9-84fe-8d6ba9623a35">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="22"/>
 	<queryString language="SQL">
 		<![CDATA[SELECT
      count(TRANSACTION_SERVICE."SERVICEID") AS Number_of_Services,
@@ -23,6 +23,9 @@ GROUP BY
 	<field name="STAFF_STAFFIC" class="java.lang.String"/>
 	<field name="STAFF_STAFFNAME" class="java.lang.String"/>
 	<field name="STAFF_STAFFPOSITION" class="java.lang.String"/>
+	<variable name="TotalSales" class="java.lang.Double" calculation="Sum">
+		<variableExpression><![CDATA[$F{TOTALREVENUE}]]></variableExpression>
+	</variable>
 	<background>
 		<band/>
 	</background>
@@ -156,16 +159,30 @@ Phone no: 607-3676531]]></text>
 		<band/>
 	</columnFooter>
 	<pageFooter>
-		<band height="17">
+		<band height="126">
 			<textField evaluationTime="Report">
-				<reportElement mode="Opaque" x="515" y="4" width="40" height="13" backcolor="#E6E6E6" uuid="9ba766ee-524f-49d5-8998-48d72f1003d8"/>
+				<reportElement mode="Opaque" x="514" y="105" width="40" height="21" backcolor="#E6E6E6" uuid="9ba766ee-524f-49d5-8998-48d72f1003d8"/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement mode="Opaque" x="1" y="0" width="515" height="17" backcolor="#E6E6E6" uuid="f5777a99-7d7b-4c69-958d-3f36e954419a"/>
+				<reportElement mode="Opaque" x="0" y="105" width="515" height="21" backcolor="#E6E6E6" uuid="f5777a99-7d7b-4c69-958d-3f36e954419a"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 			</textField>
+			<textField pattern="###0.00">
+				<reportElement x="454" y="85" width="100" height="20" uuid="02c87c2a-05a3-4241-8a4d-b0ee104b9160"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{TotalSales}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="382" y="85" width="72" height="20" uuid="a21c1a3a-20f8-4f4c-bb35-c61384f714ea"/>
+				<textElement>
+					<font size="12"/>
+				</textElement>
+				<text><![CDATA[Total Sales :]]></text>
+			</staticText>
 		</band>
 	</pageFooter>
 	<summary>
