--- a/src/reportTemplates/CustomerSummary.jrxml
+++ b/src/reportTemplates/CustomerSummary.jrxml
@@ -238,11 +238,11 @@ Phone no: 607-3676531]]></text>
 				<text><![CDATA[ Total Number of Pet :]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="360" y="39" width="73" height="20" uuid="3673f7cb-3f48-4a54-8ff6-008abac376aa"/>
+				<reportElement x="340" y="39" width="93" height="20" uuid="3673f7cb-3f48-4a54-8ff6-008abac376aa"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
-				<text><![CDATA[Total Sales : ]]></text>
+				<text><![CDATA[Total Sales : RM]]></text>
 			</staticText>
 		</band>
 	</pageFooter>
